修改完成上传

--- a/rns-api/rns-base/src/main/resources/prod/sa-base.yaml
+++ b/rns-api/rns-base/src/main/resources/prod/sa-base.yaml
@@ -1,9 +1,9 @@
 spring:
   # 数据库连接信息
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/smart_admin_v3?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-    username: root
-    password: Remote2024
+    url: jdbc:mysql://127.0.0.1:3306/pscms?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: yystudio
+    password: Yystudio@168#
     initial-size: 10
     min-idle: 10
     max-active: 100
