--- a/rns-api/rns-base/src/main/resources/dev/sa-base.yaml
+++ b/rns-api/rns-base/src/main/resources/dev/sa-base.yaml
@@ -1,9 +1,9 @@
 spring:
   # 数据库连接信息
   datasource:
-    url: jdbc:p6spy:mysql://59.110.140.88:3306/smart_admin_v3?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-    username: root
-    password: Remote2024
+    url: jdbc:p6spy:mysql://8.130.119.30:3306/pscms?autoReconnect=true&useServerPreparedStmts=false&rewriteBatchedStatements=true&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: yystudio
+    password: Yystudio@168#
     initial-size: 2
     min-idle: 2
     max-active: 10
