--- a/smart-admin-web/javascript-ant-design-vue3/.env.production
+++ b/smart-admin-web/javascript-ant-design-vue3/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
 VITE_APP_TITLE='后台管理系统'
-VITE_APP_API_URL='http://ah.yynomad.com/smart-admin-api'
+VITE_APP_API_URL='https://ah.yynomad.com/smart-admin-api'
