修改后台跨域配置

--- a/rns-api/rns-base/src/main/resources/prod/sa-base.yaml
+++ b/rns-api/rns-base/src/main/resources/prod/sa-base.yaml
@@ -108,7 +108,7 @@ http:
     keep-alive: 300000
 
 # 跨域配置
-access-control-allow-origin: 'mcolife.cn'
+access-control-allow-origin: 'yynomad.com'
 
 # 心跳配置
 heart-beat:
